# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /v1
 definitions:
+  utils.ErrorResponse:
+    properties:
+      code:
+        type: string
+      details:
+        type: string
+      error:
+        type: string
+    type: object
   utils.RcloneFile:
     properties:
       IsDir:
@@ -18,7 +27,7 @@ definitions:
 info:
   contact: {}
   description: API for processing and transforming images
-  title: Shuto API
+  title: shuto API
 paths:
   /download/{path}:
     get:
@@ -39,17 +48,29 @@ paths:
           schema:
             type: file
         "400":
-          description: Invalid parameters
+          description: Invalid request parameters
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
+        "401":
+          description: Unauthorized - Invalid signature
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "403":
+          description: Forbidden - Invalid signature
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
         "404":
           description: File not found
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
+        "410":
+          description: Gone - Token expired
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: Internal server error
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Download a file
       tags:
       - download
@@ -115,17 +136,29 @@ paths:
           schema:
             type: file
         "400":
-          description: Invalid parameters
+          description: Invalid request parameters
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
+        "401":
+          description: Unauthorized - Invalid signature
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "403":
+          description: Forbidden - Invalid signature
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
         "404":
           description: Image not found
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
+        "410":
+          description: Gone - Token expired
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: Internal server error
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Process and transform an image
       tags:
       - image
@@ -150,21 +183,21 @@ paths:
               $ref: '#/definitions/utils.RcloneFile'
             type: array
         "400":
-          description: Invalid parameters
+          description: Invalid request parameters
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
         "401":
           description: Unauthorized - Invalid or missing API key
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
         "404":
           description: Path not found
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: Internal server error
           schema:
-            type: string
+            $ref: '#/definitions/utils.ErrorResponse'
       security:
       - ApiKeyAuth: []
       summary: List contents of a directory
@@ -172,7 +205,7 @@ paths:
       - list
 securityDefinitions:
   ApiKeyAuth:
-    description: Type "Bearer" followed by a space and JWT token.
+    description: Type "Bearer" followed by a space and API key.
     in: header
     name: Authorization
     type: apiKey
